Added testng.xml file Updated pom.xml file with Surefile-Plugin - dependency and plugin